...
              ),
              const Spacer(flex: 3),
              // Login and Register buttons.
              SizedBox(
                width: double.infinity,
                child: ElevatedButton(
                  key: const ValueKey('home_login_button'), // Key for testing
                  onPressed: () => context.go('/login'),
                  child: Text(l10n.loginButton),
                ),
              ),
              const SizedBox(height: 16),
              SizedBox(
...
